# semantic_tree_generator_tira

./: .gitignore  Aptfile  README.md  coverage.xml  fly.toml  pyproject.toml  requirements.txt  routes.py  tasks.py  tasks.py.save  test
.github/workflows/: main.yml
documentation/: Implementation  Implementation.md  progress_report_week_1.md  progress_report_week_2.md  progress_report_week_3.md  progress_report_week_4.md  progress_report_week_5.md  progress_report_week_6.md  project_definition.md  testing_document.md  user_instructions.md
src/entities/: proposition_parser.py  semantic_tree_node.py
src/services/: semantic_tree_gen.py  semantic_tree_service.py
src/tests/: proposition_parser_test.py  semantic_tree_node_test.py  semantic_tree_parser_test.py
src/tests/services/: semantic_tree_service_test.py
templates/: index.html  result.html
